--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,29 @@
+@font-face {
+  font-family: 'JetBrainsMono';
+  src: url('/fonts/JetBrainsMono-Light.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'JetBrainsMono';
+  src: url('/fonts/JetBrainsMono-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'JetBrainsMono';
+  src: url('/fonts/JetBrainsMono-SemiBold.ttf') format('truetype');
+  font-weight: 600;
+  font-style: normal;
+}
+
+body {
+  margin: 0;
+  font-family: 'JetBrainsMono', sans-serif;
+}
+
 body {
   margin: 0;
 }
@@ -15,6 +41,7 @@ body {
   padding: 1rem 0;
   display: flex;
   justify-content: center;
+  align-items: center;
   width: 100%;
   color: #646464;
   font-size: 0.8rem;
